// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component CopyrightAgreement should have a proper style generator 1`] = `
Object {
  "checkboxChecked": Object {
    "color": "test2 !important",
  },
  "checkboxRoot": Object {
    "color": "test1",
  },
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "alignItems": "flex-start",
    "margin": 0,
  },
}
`;

exports[`Component CopyrightAgreement should have a proper style generator 2`] = `
Object {
  "checkboxChecked": Object {
    "color": "",
  },
  "checkboxRoot": Object {
    "color": "",
  },
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "alignItems": "flex-start",
    "margin": 0,
  },
}
`;

exports[`Component CopyrightAgreement should render checked if deposit agreement accepted 1`] = `
<WithStyles(ForwardRef(FormControlLabel))
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <ForwardRef(WithStyles)
      checked={true}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      id="deposit-agreement"
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <ForwardRef(WithStyles)
      classes={
        Object {
          "root": "",
        }
      }
      color="secondary"
      component="div"
    >
      test deposit agreement
    </ForwardRef(WithStyles)>
  }
/>
`;

exports[`Component CopyrightAgreement should render default view 1`] = `
<WithStyles(ForwardRef(FormControlLabel))
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <ForwardRef(WithStyles)
      checked={false}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      id="deposit-agreement"
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <ForwardRef(WithStyles)
      classes={
        Object {
          "root": "",
        }
      }
      color="error"
      component="div"
    >
      test deposit agreement
    </ForwardRef(WithStyles)>
  }
/>
`;
